test/Runner/errors/tests/MI/Test6.mi.js
eve("Suite", () => {
	emerge("123")
});